--- a/src/projectshipwreck/projectshipwreck/projectshipwreck.vcxproj.filters
+++ b/src/projectshipwreck/projectshipwreck/projectshipwreck.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="Update.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="S_InputManager.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Vector2D.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameApplicationLayer.cpp">
@@ -57,6 +63,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Update.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="S_InputManager.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
