--- a/src/projectshipwreck/projectshipwreck/projectshipwreck.vcxproj
+++ b/src/projectshipwreck/projectshipwreck/projectshipwreck.vcxproj
@@ -83,14 +83,17 @@
     <ClInclude Include="GameApplicationLayer.h" />
     <ClInclude Include="Header.h" />
     <ClInclude Include="S_GameModes.h" />
+    <ClInclude Include="S_InputManager.h" />
     <ClInclude Include="S_Resourcemanager.h" />
     <ClInclude Include="S_EventHandler.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Update.h" />
+    <ClInclude Include="Vector2D.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameApplicationLayer.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="S_InputManager.cpp" />
     <ClCompile Include="S_Resourcemanager.cpp" />
     <ClCompile Include="S_EventHandler.cpp" />
     <ClCompile Include="Timer.cpp" />
