--- a/src/projectshipwreck/projectshipwreck/projectshipwreck.vcxproj
+++ b/src/projectshipwreck/projectshipwreck/projectshipwreck.vcxproj
@@ -82,6 +82,7 @@
     <ClInclude Include="A_Animation.h" />
     <ClInclude Include="GameApplicationLayer.h" />
     <ClInclude Include="Header.h" />
+    <ClInclude Include="SaveAndLoad.h" />
     <ClInclude Include="S_GameModes.h" />
     <ClInclude Include="S_InputManager.h" />
     <ClInclude Include="S_Resourcemanager.h" />
@@ -93,6 +94,7 @@
   <ItemGroup>
     <ClCompile Include="GameApplicationLayer.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="SaveAndLoad.cpp" />
     <ClCompile Include="S_InputManager.cpp" />
     <ClCompile Include="S_Resourcemanager.cpp" />
     <ClCompile Include="S_EventHandler.cpp" />
